--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ before_script:
   - npm i eslint esm jsdom
 script:
   - npx eslint .
-  - npx qunit test/index.js
+  - npx qunit public/test/index.js
