change todo to to do where applicable

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "08-fsjs-server",
   "version": "1.0.0",
-  "description": "Fullstack My Todo App",
+  "description": "Fullstack To Do App",
   "main": "server.js",
   "scripts": {
     "lint": "eslint .",
